--- a/index.html
+++ b/index.html
@@ -12,24 +12,24 @@
 
 <body>
     <div class="container">
-        <h1>Welcome to the Game!</h1>
-        <div class="avatar-screen"> <span style='font-size:100px;'>&#128572;</span></div>
+        <h1 id ="heading" >Welcome to the Game!</h1>
+        <div  class="avatar-screen"> <span id= "avatar-screen" style='font-size:100px;'>&#128021;</span></div>
         <h2>Age = <span id="age-indicator">0</span></h2>
         <div class="metrics">
             <div class="metric">
-                <h3>1</h3>
+                <h3 id="hunger-indicator">0</h3>
                 <h3 class="label">Hunger</h3>
-                <button>Feed Me</button>
+                <button id="feed-btn">Feed Me</button>
             </div>
             <div class="metric">
-                <h3>1</h3>
+                <h3 id= "boredom-indicator">0</h3>
                 <h3 class="label">Boredom</h3>
-                <button>Play Time</button>
+                <button id="play-btn">Play Time</button>
             </div>
             <div class="metric">
-                <h3>1</h3>
-                <h3 class="label">Tireness</h3>
-                <button>Sleep Time</button>
+                <h3 id="sleepiness-indicator">0</h3>
+                <h3 class="label">Sleepiness</h3>
+                <button id="sleep-btn">Sleep Time</button>
             </div>
         </div>
 
