--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <h1 id ="heading" >Welcome to the Game!</h1>
-        <div  class="avatar-screen"> <span id= "avatar-screen" style='font-size:100px;'>&#128021;</span></div>
+        <div  class="avatar-screen"> <span class="animate" id= "avatar" style='font-size:100px;'>&#128021;</span></div>
         <h2>Age = <span id="age-indicator">0</span></h2>
         <div class="metrics">
             <div class="metric">
